tests/blob/faulty_instantiate_non_blob.sy
A :: enum
end

start :: fn do
    A {}
end

// error: the given type isn't a blob
